# doxdisco

./: .gitignore  README.md  cli.py  config.py  pyproject.toml  takeaways_doxdisco_feedback.md  tests.yml
.github/workflows/: publish.yml
core/: agent_rag.py  text_rag.py
fetch_prep_data/: parser.py  pickle_utils.py  reader.py
prompt/: agent_tools.py  chunking_utils.py  llm_utils.py  models.py  prompt_builder.py  search_utils.py  vector_search.py
tests/: test_zippa.py
zippa/: cli.py  main.py  utils.py
