[project]
name = "doxdisco"
version = "0.1.0"
description = "simple RAG for screening docs in GitHub repos "
authors = [
    {name = "Carlos Pumar-Frohberg", email = "cpumarfrohberg@gmail.com"}
]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"

dependencies = [
    "minsearch>=0.0.7",
    "numpy>=2.3.4",
    "openai>=2.3.0",
    "pydantic>=2.12.2",
    "python-dotenv>=1.1.1",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "typer>=0.19.2",
]

[project.scripts]
disco = "cli:app"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pre-commit>=4.2.0",
    "ty>=0.0.1a21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "prompt*", "fetch_prep_data*"]

[tool.uv]
package = true

[tool.uv.workspace]
members = []
